security/cert-manager/k8s/base/namespace.yaml
# cert-manager/k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    istio-injection: disabled
