security/cert-manager/k8s/base/service.yaml
# cert-manager/k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager
  labels:
    flexwiz.io/app: cert-manager
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/component: controller
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "9402"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9402
    protocol: TCP
    targetPort: 9402
  selector:
    flexwiz.io/app: cert-manager

---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  labels:
    flexwiz.io/app: webhook
    app.kubernetes.io/name: webhook
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 10250
  selector:
    flexwiz.io/app: webhook
